--- a/starter-code/tweet-clone.html
+++ b/starter-code/tweet-clone.html
@@ -8,6 +8,45 @@
   <title>HTML &amp; CSS | Ironhack PreWork |</title>
 </head>
 <body>
+  <div class= "tweet">
+
+    <div class= "content1" >
+      <img class="foto" src="img/profile-picture.jpg" alt="Foto profile">
+      <div class= "profile">
+        <img class="guy" src="img/account-logo.jpg" alt="icon1">
+        <span>jack</span>
+        <img class= "tick" src="img/validated-account.jpg" alt="icon2">
+        <p id="name" style=" color: rgb(101, 116, 127); font-size:20px" >@jack</p>
+
+      </div>
+
+    </div>
+
+    <div class= "content2">
+      <button id="follow">
+        <img src="img/twitter-logo.jpg" alt="Follow">
+        <span id= "text1">Follow</span>
+      </button>
+
+    </div>
+
+
+    <div class="content3">
+      <p>Just setting up my twtrr</p>
+      <p id="time"><dattime>9:50 PM</dattime> -21 Mar 2006</p>
+
+    </div>
+
+    <div class= "content4">
+      <img src="img/reply.jpg" alt="reply">
+      <img src="img/retweet.jpg" alt="retweet">
+      <span id="retweets">92,555</span>
+      <img src="img/favorite.jpg" alt="favorite">
+      <span id="likes" >71,111</span>
+
+    </div>
+
+  </div>
 
 </body>
 </html>
